--- a/popup.html
+++ b/popup.html
@@ -9,12 +9,12 @@
   <title>Bias Checker</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <!-- Start Vendor Scripts -->
-  <script
+  <!-- <script
           src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"
           integrity="sha256-Gn7MUQono8LUxTfRA0WZzJgTua52Udm1Ifrk5421zkA="
           crossorigin="anonymous">
-  </script>
-  <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+  </script> -->
+  <script src="https://www.gstatic.com/firebasejs/5.0.0/firebase.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <!-- Finish Vendor Scripts -->
 
@@ -33,7 +33,7 @@
   <script src="js/popup.js"></script>
   <!-- Finish App Scripts-->
 </head>
-<body>
+
 <div id="app" class="container">
   <!-- Start Plus Button-->
   <h3>Welcome to Bias Checker!</h3>
@@ -59,7 +59,7 @@
   <div class="row">
     <div class="col-xs-12">
       <h6 class="text-center">
-        <em>Current Crowdsourced Bias Rating</em>
+        <p>Current Crowdsourced Bias Rating</p>
       </h6>
       <h2 class="text-center"></h2>
       <p class="text-center"></p>
@@ -78,6 +78,7 @@
   <!-- Finish Minus Button-->
 
 </div>
-</body>
+</head>
+<body></body>
 </html>
 
