connection to firebase: fuckin established

--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,7 @@
   <!-- Finish App Scripts-->
 </head>
 
-<div id="app" class="container">
+<div class="container">
   <!-- Start Plus Button-->
   <h3>Welcome to Bias Checker!</h3>
   <div class="row">
