--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,7 @@
 <div class="container">
   <!-- Start Plus Button-->
   <h3>Welcome to Bias Checker!</h3>
+  <h6 id="myText"></h6>
   <div class="row">
       <p> This source's bias score is: </p>
       <h3 class="text-center"></h3>
