--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,7 @@
           <p class="text-center" id="article-label"></p>
           <h3 class="text-center"></h3>
       </div>
-      <div class="divider" id="divider"></div>
+      <div class="divider" id="divider1"></div>
       <h3 class="text-center" id="add-input"></h3>
       <!-- Start Plus Button-->
         
